(include_subdirs unqualified)

(library
 (name khasmc)
 (libraries
  fmt
  batteries
  ppx_deriving
  core
  yojson
  ppx_deriving_yojson.runtime)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.make ppx_deriving.eq ppx_inline_test))
 (flags
  (:standard -warn-error -A -g -annot))
 (ocamlopt_flags
  (-g -annot -afl-instrument)))
