(include_subdirs unqualified)

(library
 (name khasmc)
 (public_name khasmc)
 (libraries fmt batteries ppx_deriving fileutils)
 (inline_tests
  (flags (-verbose)))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.make ppx_deriving.eq ppx_inline_test))
 (flags
  (:standard -warn-error -A))
 (ocamlopt_flags
  (:standard -O3)))

(rule
 (targets runtime_lib.ml)
 (deps
  (:gen ./runtime/generate.sh)
  (universe))
 (action
  (run %{gen})))
